--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Chaang Shop</title>
   </head>
   <body style="margin: 0px;">
-    <iframe width="100%" height="100%" seamless frameborder="0" scrolling="no" src="https://script.google.com/macros/s/AKfycbyzXaxjdB7fjQOouTXaNrEz2GKxrG9bUn4j2kqyqSPVyJEV3BimkD06pkcHtvZubWaX3w/exec"></iframe>
+    <iframe width="100%" height="100%" seamless frameborder="0" scrolling="no" src=""></iframe>
   </body>
 </html>
